// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Label renders with different Colours 1`] = `
Array [
  <span
    className="sc-bgA-dc hFCLOZ"
  >
    Xsmall
  </span>,
  <span
    className="sc-bgA-dc bxSOEq"
    color="goten.100"
  >
    Xsmall
  </span>,
  <span
    className="sc-bgA-dc jIDZvG"
    color="goten.100"
  >
    Xsmall
  </span>,
]
`;

exports[`Label renders with different Icons 1`] = `
Array [
  <div
    className="flex flex-wrap items-center justify-around gap-2 w-full"
  >
    <span
      className="sc-bgA-dc gbski"
      size="twoxsmall"
    >
      <span
        className="sc-fduepK cWcCvs"
        size="twoxsmall"
      >
        <svg
          className="sc-iqGgem"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 21.278v-6.334m0-2.638v-1.584M25.5 16a9.5 9.5 0 11-19 0 9.5 9.5 0 0119 0z"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </span>
      Twoxsmall
    </span>
    <span
      className="sc-bgA-dc iehwxe"
      size="twoxsmall"
    >
      Twoxsmall
      <span
        className="sc-cmvVVv fPVuqE"
        size="twoxsmall"
      >
        <svg
          className="sc-gSAPjG"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7 7l9 9m0 0l-9 9m9-9l9 9m-9-9l9-9"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </span>
    </span>
    <span
      className="sc-bgA-dc iqlAPo"
      size="twoxsmall"
    >
      <span
        className="sc-fduepK cWcCvs"
        size="twoxsmall"
      >
        <svg
          className="sc-iqGgem"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 21.278v-6.334m0-2.638v-1.584M25.5 16a9.5 9.5 0 11-19 0 9.5 9.5 0 0119 0z"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </span>
      Twoxsmall
      <span
        className="sc-cmvVVv fPVuqE"
        size="twoxsmall"
      >
        <svg
          className="sc-gSAPjG"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7 7l9 9m0 0l-9 9m9-9l9 9m-9-9l9-9"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </span>
    </span>
  </div>,
  <div
    className="flex flex-wrap items-center justify-around gap-2 w-full"
  >
    <span
      className="sc-bgA-dc hjTIDT"
    >
      <span
        className="sc-fduepK cHJErN"
      >
        <svg
          className="sc-iqGgem"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 21.278v-6.334m0-2.638v-1.584M25.5 16a9.5 9.5 0 11-19 0 9.5 9.5 0 0119 0z"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </span>
      Xsmall
    </span>
    <span
      className="sc-bgA-dc lcYaeH"
    >
      Xsmall
      <span
        className="sc-cmvVVv kKLWYR"
      >
        <svg
          className="sc-gSAPjG"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7 7l9 9m0 0l-9 9m9-9l9 9m-9-9l9-9"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </span>
    </span>
    <span
      className="sc-bgA-dc kmgzHF"
    >
      <span
        className="sc-fduepK cHJErN"
      >
        <svg
          className="sc-iqGgem"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 21.278v-6.334m0-2.638v-1.584M25.5 16a9.5 9.5 0 11-19 0 9.5 9.5 0 0119 0z"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </span>
      Xsmall
      <span
        className="sc-cmvVVv kKLWYR"
      >
        <svg
          className="sc-gSAPjG"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7 7l9 9m0 0l-9 9m9-9l9 9m-9-9l9-9"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </span>
    </span>
  </div>,
]
`;

exports[`Label renders with different LetterCases 1`] = `
Array [
  <span
    className="sc-bgA-dc hFCLOZ"
  >
    Default
  </span>,
  <span
    className="sc-bgA-dc AowLm"
  >
    Lowercase
  </span>,
]
`;

exports[`Label renders with different Sizes 1`] = `
Array [
  <span
    className="sc-bgA-dc dZNqZg"
    size="twoxsmall"
  >
    Twoxsmall
  </span>,
  <span
    className="sc-bgA-dc hFCLOZ"
  >
    Xsmall
  </span>,
  <span
    className="sc-bgA-dc jTEiiJ"
    size="twoxsmall"
  >
    Twoxsmall
  </span>,
  <span
    className="sc-bgA-dc AowLm"
  >
    Xsmall
  </span>,
]
`;
